update template html and css for display of regular content

--- a/style.css
+++ b/style.css
@@ -293,3 +293,12 @@ li a .fa-map-marker {
 .leaflet-popup-content-wrapper {
   border-radius: 6px !important;
 }
+
+
+/* Non-map content */
+
+.content-container {
+  margin-left: 85px;
+  background: #fff;
+  height: 100vh;
+}
