--- a/style.css
+++ b/style.css
@@ -301,6 +301,7 @@ li a .fa-map-marker {
   margin-left: 85px;
   background: #fff;
   height: 100vh;
+  overflow-x: hidden;
 }
 
 /*single location*/
@@ -314,8 +315,14 @@ li a .fa-map-marker {
 
 /* Narrative Scrolly Section */
 
+.narrative-title-section {
+  padding: 25%;
+  text-align: center;
+  margin-bottom: 2em;
+}
+
 #narrative-section .map {
-  height: 500px;
+  height: 100vh;
   width: 100%;
   position: sticky;
 
@@ -328,6 +335,10 @@ li a .fa-map-marker {
 
 #narrative-section .step {
   min-height: 500px;
+}
+
+#narrative-section .row {
+  margin-left: 0;
 }
 
 /* Another Comment */
