remove tile layer, restyle base map, add JSON feature editing ability

--- a/style.css
+++ b/style.css
@@ -136,6 +136,7 @@ body, html {
 #front-page {
   height: 100vh;
   width: calc(100vw - 85px);
+  background-color: #fff;
 }
 .map .full-page {
   background-color: #fff;
